# uv-simple-template

./: .gitignore  LICENSE  README.md  TEMPLATE_GUIDE.md  pyproject.toml
tests/: test_sample.py
